/*
 *  Copyright (c) 2016, https://github.com/nebula-im
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package zproto;

option java_package = "com.zchat.engine.zproto";
option java_outer_classname = "ZProto";
option optimize_for = CODE_SIZE;

message UserTokenAuthReq {
  string app_key = 1;
  string user_id = 2;
  string user_token = 3;
  
  // uint64 client_time = 4;
}

// 服务器和客户端对时
message UserTokenAuthRsp {
  // uint64 client_time = 1;
  // uint64 server_time = 2;
  uint32 app_id = 1;
  string user_id = 2;
  string nick = 3;
  string avatar = 4;
}
